rust/crates/agent-burn/src/snapshots/agent_burn__output__tests__snapshots_model_multiline_formatting_sorts_dedupes_and_shortens_names.snap
---
source: crates/agent-burn/src/output.rs
expression: format_models_multiline(&models)
---
- gpt-5.2-codex
- sonnet-4
- unknown
